--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janelle Brown - Senior Experience Designer</title>
+    <title>Aansh Gupta - Teen on Project Hunting</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -169,14 +169,14 @@
     <!-- Header & Navigation -->
     <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 reveal">
         <div class="container mx-auto px-6 py-5 flex justify-between items-center">
-            <a href="#" class="text-xl font-bold tracking-wider">JANELLE BROWN</a>
+            <a href="#" class="text-xl font-bold tracking-wider">AANSH GUPTA</a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#about" class="text-gray-700 hover:text-black transition duration-300">About</a>
                 <a href="#work" class="text-gray-700 hover:text-black transition duration-300">Work</a>
                 <a href="#contact" class="text-gray-700 hover:text-black transition duration-300">Contact</a>
             </nav>
-            <a href="mailto:info@janelle-brown.com" class="hidden md:block border border-gray-300 text-black font-medium px-4 py-2 rounded-full hover:bg-black hover:text-white transition duration-300">
-                info@janelle-brown.com
+            <a href="mailto:aanshg2007@gmail.com" class="hidden md:block border border-gray-300 text-black font-medium px-4 py-2 rounded-full hover:bg-black hover:text-white transition duration-300">
+                aanshg2007@gmail.com
             </a>
             <!-- Mobile Menu Button -->
             <button id="mobile-menu-btn" class="md:hidden text-black focus:outline-none">
@@ -188,7 +188,7 @@
             <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-gray-100">About</a>
             <a href="#work" class="block py-3 px-6 text-gray-700 hover:bg-gray-100">Work</a>
             <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-gray-100">Contact</a>
-            <a href="mailto:info@janelle-brown.com" class="block py-3 px-6 text-gray-700 hover:bg-gray-100">Email Me</a>
+            <a href="mailto:aanshg2007@gmail.com" class="block py-3 px-6 text-gray-700 hover:bg-gray-100">Email Me</a>
         </div>
     </header>
 
@@ -198,13 +198,13 @@
             <div class="container mx-auto px-6">
                 <div class="max-w-5xl mx-auto">
                     <h1 class="hero-title">
-                        <span class="hero-text-line">SENIOR</span>
-                        <span class="hero-text-line">EXPERIENCE</span>
-                        <span class="hero-text-line">DESIGNER©</span>
+                        <span class="hero-text-line">TEEN ON</span>
+                        <span class="hero-text-line">PROJECT</span>
+                        <span class="hero-text-line">HUNTING</span>
                     </h1>
                     <div class="flex justify-between items-center mt-8 text-lg text-gray-600 reveal">
-                        <p>CURRENTLY CRAFTING EXPERIENCES AT CROSBY</p>
-                        <p>(2021 - PRESENT)</p>
+                        <p>EXPLORING AI & BUILDING PROJECTS</p>
+                        <p>2025</p>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
         <section id="about" class="pb-20 md:pb-32">
             <div class="container mx-auto px-6">
                 <div class="reveal">
-                     <img id="about-image" src="https://placehold.co/1200x800/e0e0e0/0a0a0a?text=Janelle+Brown" alt="Janelle Brown" class="rounded-2xl w-full h-auto mb-16">
+                     <img id="about-image" src="https://placehold.co/1200x800/e0e0e0/0a0a0a?text=Aansh+Gupta" alt="Aansh Gupta" class="rounded-2xl w-full h-auto mb-16">
                 </div>
                 <div class="grid md:grid-cols-2 gap-12">
                     <div class="reveal">
@@ -227,10 +227,10 @@
                         </div>
                         <div id="bio-content">
                             <p class="text-gray-700 mb-4 leading-relaxed text-lg">
-                                I'm a passionate designer with a knack for creating engaging digital experiences. With over 8 years in the industry, I've honed my skills in UI/UX design, interaction design, and user research.
+                                I'm a 17-year-old student with a deep passion for Artificial Intelligence and its potential to solve real-world problems. From my first experiments with machine learning models, I've been captivated by the power of data and algorithms to create intelligent systems.
                             </p>
                             <p class="text-gray-700 leading-relaxed text-lg">
-                                My goal is to merge aesthetics with functionality to deliver products that are not only visually stunning but also intuitive and accessible to everyone.
+                                My goal is to continue learning and growing in the field of AI, with a focus on developing projects that are not only technically challenging but also impactful. I'm always looking for new opportunities to learn and collaborate with others who share my curiosity.
                             </p>
                         </div>
                     </div>
@@ -332,7 +332,7 @@
                     Have a project in mind or just want to say hi? Feel free to reach out.
                 </p>
                 <div class="reveal">
-                    <a href="mailto:info@janelle-brown.com" class="inline-block bg-black text-white font-semibold text-lg px-12 py-4 rounded-full hover:bg-gray-800 transition duration-300">
+                    <a href="mailto:aanshg2007@gmail.com" class="inline-block bg-black text-white font-semibold text-lg px-12 py-4 rounded-full hover:bg-gray-800 transition duration-300">
                         Get In Touch
                     </a>
                 </div>
@@ -348,7 +348,7 @@
                 <a href="#" class="hover:text-black transition duration-300">LinkedIn</a>
                 <a href="#" class="hover:text-black transition duration-300">Dribbble</a>
             </div>
-            <p>&copy; 2024 Janelle Brown. All Rights Reserved.</p>
+            <p>&copy; 2025 Aansh Gupta. All Rights Reserved.</p>
         </div>
     </footer>
 
@@ -548,4 +548,3 @@
     </script>
 </body>
 </html>
-
